<resources>
    <string name="app_name">Lab4</string>
    <string name="launch_profile">Show My Profile</string>
    <string name="profile_activity_text">This is the ProfileActivity</string>
    <string name="exit_and_save">Exit and Save</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="show_counter">Show Counter</string>
    <string name="count_to">Count To...</string>
</resources>