<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="97dp"
        android:onClick="onGoBackClicked"
        android:text="@string/exit_and_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_textview"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/status_textview"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>